add images to about.html, change parallax 0.5 -> 0.8

--- a/css/style.css
+++ b/css/style.css
@@ -210,7 +210,7 @@ h1, h2, h3, h4, h5, h6 {
 @media screen and (max-width: 768px) {
   .fh5co-hero, .fh5co-parallax {
     height: inherit;
-    padding: 4em 0;
+    padding: 2em 0 /*4em*/;
   }
 }
 .fh5co-hero .fh5co-intro h1, .fh5co-parallax .fh5co-intro h1 {
