--- a/css/style.css
+++ b/css/style.css
@@ -297,7 +297,7 @@ h1, h2, h3, h4, h5, h6 {
 .fh5co-table-cell,
 .fh5co-hero,
 .fh5co-parallax {
-  height: 670px;
+  height: 670px;/*670px*/
 }
 
 .fh5co-hero, .fh5co-parallax {
