--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ body {
 }
 
 a {
-  color: #52d3aa;
+  color: /*#2e969f*//*#54b2a9*/#52d3aa;
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s;
