--- a/css/style~.css
+++ b/css/style~.css
@@ -5,11 +5,12 @@ html{
 
 body{
 	font-family: Arial, Helvetica, sans-serif;
+	color: #4e4e4e;
 	font-size: 16px;
 	line-height: 1.5em;
 	padding: 0;
 	margin: 0;
-	background-color: #CFD8DC;
+	background-color: #f1f1f1;
 }
 
 /* Global */
@@ -23,22 +24,23 @@ ul{
 	padding: 0;
 }
 
+a, a:hover, a:active, a:visited, a:focus {
+    text-decoration:none;
+}
+
 /* Header */
 header{
-	background: #00695C;
-	color: #ffffff;
-	/*padding: 16px 0;*/
-	/*border-bottom: #ffffff 3px solid;*/
-	/*border-bottom-left-radius: 8px;*/
-	/*border-bottom-right-radius: 8px;*/
+	background: #14273f;
+	color: #f1f1f1;
 	position: fixed;
 	z-index: 1000;
 	width: 100%;
 	top: 0;
+	box-shadow: 0px 0px 8px #888888;
 }
 
 header a{
-	color: #ffffff;
+	color: #f1f1f1;
 	text-decoration: none;
 	text-transform: uppercase;
 	font-size: 16px;
@@ -59,7 +61,7 @@ header ul li{
 header li a:hover{
 	background-color: #f4f4f4;
 	text-decoration: none;
-	color: #00695C;
+	color: #14273f; /*#00695C;*/
 }
 
 header li a.active{
@@ -70,13 +72,14 @@ header li a.active{
 
 header #branding{
 	float: left;
-	-webkit-transform: translate(0%, 25%);  
-    transform: translate(0%, 25%);
+	/*-webkit-transform: translate(0%, 25%);  
+    transform: translate(0%, 25%);*/
 	align-items: center;
 }
 
 header #branding h1{
 	margin: 0;
+	padding-top: 8px
 }
 
 header nav{
@@ -105,11 +108,14 @@ header nav{
 
 .section-left{
 	padding: 0;
+	/*width: inherit;*/
+	position: fixed;
 }
 
 .section h2{
 	margin: 0;
 	padding: 0;
+	width: inherit;
 }
 
 .container-body{
@@ -122,12 +128,96 @@ header nav{
 
 img.head-shot{
 	width: 100%;
+	border-top-right-radius: 4px;
+	border-top-left-radius: 4px;
 }
 
 footer{
-	
+	text-align: center;
+	color: #f1f1f1;
+	background-color: #14273f;
+}
+
+footer a{
+	color: #f1f1f1;
+	background-color: #14273f;
+	padding: 10px;
+	display: block;
+	margin: 0;
+	width: 40px;
+	height: 40px;
+	border-radius: 50%;
+}
+
+footer a:hover{
+	text-decoration: none;
+	color: #14273f;
+	background-color: #f1f1f1;
+}
+
+footer a:visited{
+	text-decoration: none;
+}
+
+footer ul{
+	margin: auto;
 }
 
 footer li{
+	display: inline-block;
+	margin-bottom: 16px;
+}
 
+footer p{
+	margin: 0;
+	margin-top: 16px;
+	margin-bottom: 8px;
+	padding: 0;
+}
+
+@media only screen and (max-width: 768px) {
+    .section-left{
+		position: relative;
+	}
+
+	footer a{
+		width: 30px;
+		height: 30px;
+		padding: 0px;
+		text-align: center;
+	}
+	footer i{
+		position: relative;
+		top: 18%;
+	}
+}
+
+@media only screen and (max-width: 500px) {
+    body {
+        
+    }
+
+    nav{
+		width: 100%;
+	}
+
+    header #branding{
+		display: block;
+		width: 100%;
+		text-align: center;
+		padding-bottom: 4px;
+	}
+
+	header ul{
+		text-align: center;
+	}
+
+	header ul li{
+		float: none;
+		display: inline-block;
+	}
+
+	.container-body{
+		margin: 107px auto 0;
+	}
 }
