--- a/css/style~.css
+++ b/css/style~.css
@@ -132,6 +132,36 @@ img.head-shot{
 	border-top-left-radius: 4px;
 }
 
+.panel-group{
+	margin: 0px 8px;
+}
+
+.panel{
+	box-shadow: 0px 0px 8px #888888;
+	border: 0;
+}
+
+.panel-group .panel+.panel {
+    margin-top: 0; 
+}
+
+.panel-group .panel {
+    margin-bottom: 16px;
+}
+
+.panel-heading{
+	padding: 16px;
+}
+
+.panel-title{
+	font-size: 30px;
+}
+
+.panel-body{
+	padding: 16px;
+	border-top: 1px solid #ddd
+}
+
 footer{
 	text-align: center;
 	color: #f1f1f1;
